--- a/about.html
+++ b/about.html
@@ -173,33 +173,33 @@
         <div class="footer-2--div">
           <p class="footer-subheading">courses</p>
           <ul>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
+            <li><a href="index.html">HTML</a></li>
+            <li><a href="index.html">HTML</a></li>
+            <li><a href="index.html">HTML</a></li>
+            <li><a href="index.html">HTML</a></li>
+            <li><a href="index.html">HTML</a></li>
           </ul>
         </div>
 
-        <div class="footer-3--div">
+        <div class="footer-3--div" data-aos="fade-up" data-aos-delay="900">
           <p class="footer-subheading">links</p>
           <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">CSS</a></li>
+            <li><a href="index.html">CSS</a></li>
+            <li><a href="index.html">CSS</a></li>
+            <li><a href="index.html">CSS</a></li>
+            <li><a href="index.html">CSS</a></li>
           </ul>
         </div>
 
-        <div class="footer-4--div">
+        <div class="footer-4--div" data-aos="fade-up" data-aos-delay="1200">
           <p class="footer-subheading">blogs</p>
           <ul>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
+            <li><a href="index.html">JAVA SCRIPT</a></li>
+            <li><a href="index.html">JAVA SCRIPT</a></li>
+            <li><a href="index.html">JAVA SCRIPT</a></li>
+            <li><a href="index.html">JAVA SCRIPT</a></li>
+            <li><a href="index.html">JAVA SCRIPT</a></li>
           </ul>
         </div>
       </div>
