--- a/html_files/java.html
+++ b/html_files/java.html
@@ -174,33 +174,33 @@ data-min-height="500px" data-form-id="63848">
           <div class="footer-2--div" data-aos="fade-up" data-aos-delay="600">
             <p class="footer-subheading">courses</p>
             <ul>
-              <li><a href="index.html">css</a></li>
-              <li><a href="index.html">css</a></li>
-              <li><a href="index.html">css</a></li>
-              <li><a href="index.html">css</a></li>
-              <li><a href="index.html">css</a></li>
+              <li> <a href="index.html">HTML</a></li>
+              <li> <a href="index.html">HTML</a></li>
+              <li> <a href="index.html">HTML</a></li>
+              <li> <a href="index.html">HTML</a></li>
+              <li> <a href="index.html">HTML</a></li>
             </ul>
-          </div>
-  
-          <div class="footer-3--div" data-aos="fade-up" data-aos-delay="900">
-            <p class="footer-subheading">links</p>
+        </div>
+
+        <div class="footer-3--div" data-aos="fade-up" data-aos-delay="900">
+          <p class="footer-subheading"> links</p>
             <ul>
-              <li><a href="index.html">home</a></li>
-              <li><a href="index.html">home</a></li>
-              <li><a href="index.html">home</a></li>
-              <li><a href="index.html">home</a></li>
-              <li><a href="index.html">home</a></li>
+              <li> <a href="index.html">CSS</a></li>
+              <li> <a href="index.html">CSS</a></li>
+              <li> <a href="index.html">CSS</a></li>
+              <li> <a href="index.html">CSS</a></li>
+              <li> <a href="index.html">CSS</a></li>
             </ul>
-          </div>
-  
-          <div class="footer-4--div" data-aos="fade-up" data-aos-delay="1200">
-            <p class="footer-subheading">blogs</p>
+        </div>
+
+        <div class="footer-4--div" data-aos="fade-up" data-aos-delay="1200">
+          <p class="footer-subheading"> blogs</p>
             <ul>
-              <li><a href="index.html">html</a></li>
-              <li><a href="index.html">html</a></li>
-              <li><a href="index.html">html</a></li>
-              <li><a href="index.html">html</a></li>
-              <li><a href="index.html">html</a></li>
+              <li> <a href="index.html">JAVA SCRIPT</a></li>
+              <li> <a href="index.html">JAVA SCRIPT</a></li>
+              <li> <a href="index.html">JAVA SCRIPT</a></li>
+              <li> <a href="index.html">JAVA SCRIPT</a></li>
+              <li> <a href="index.html">JAVA SCRIPT</a></li>
             </ul>
           </div>
         </div>
