--- a/html_files/python.html
+++ b/html_files/python.html
@@ -70,7 +70,7 @@
 
     <!======== End NAVBAR Section =========>
 
-    <!-- ========== Start download toppic wise notes ========== -->
+    <!-- ========== Start download topic wise notes ========== -->
     <section class= "section-notes">
       <div class="container">
         <h2 class="section-common-heading" >Download Premium PYTHON   Notes  <i class="fa-solid fa-download fa-bounce"></i></h2>
@@ -384,7 +384,7 @@
         </div>
       </div>
     </section>
-    <!-- ========== End download toppic wise notes ========== -->
+    <!-- ========== End download topic wise notes ========== -->
     <!========== Start footer section ==========>
 
     <footer>
@@ -460,33 +460,33 @@
         <div class="footer-2--div" data-aos="fade-up" data-aos-delay="600">
           <p class="footer-subheading">courses</p>
           <ul>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
-            <li><a href="index.html">css</a></li>
+            <li> <a href="index.html">HTML</a></li>
+            <li> <a href="index.html">HTML</a></li>
+            <li> <a href="index.html">HTML</a></li>
+            <li> <a href="index.html">HTML</a></li>
+            <li> <a href="index.html">HTML</a></li>
           </ul>
-        </div>
+      </div>
 
-        <div class="footer-3--div" data-aos="fade-up" data-aos-delay="900">
-          <p class="footer-subheading">links</p>
+      <div class="footer-3--div" data-aos="fade-up" data-aos-delay="900">
+        <p class="footer-subheading"> links</p>
           <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
-            <li><a href="index.html">home</a></li>
+            <li> <a href="index.html">CSS</a></li>
+            <li> <a href="index.html">CSS</a></li>
+            <li> <a href="index.html">CSS</a></li>
+            <li> <a href="index.html">CSS</a></li>
+            <li> <a href="index.html">CSS</a></li>
           </ul>
-        </div>
+      </div>
 
-        <div class="footer-4--div" data-aos="fade-up" data-aos-delay="1200">
-          <p class="footer-subheading">blogs</p>
+      <div class="footer-4--div" data-aos="fade-up" data-aos-delay="1200">
+        <p class="footer-subheading"> blogs</p>
           <ul>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
-            <li><a href="index.html">html</a></li>
+            <li> <a href="index.html">JAVA SCRIPT</a></li>
+            <li> <a href="index.html">JAVA SCRIPT</a></li>
+            <li> <a href="index.html">JAVA SCRIPT</a></li>
+            <li> <a href="index.html">JAVA SCRIPT</a></li>
+            <li> <a href="index.html">JAVA SCRIPT</a></li>
           </ul>
         </div>
       </div>
